# automaton-auditor

./: .env.example  .gitignore  README.md  app.py  main.py  pyproject.toml
audit/report_bypeer_received/: audit_report.md
audit/report_onpeer_generated/: report_2026-02-27_22-18-19.md  report_2026-02-28_17-55-30.md
audit/report_onself_generated/: report_2026-02-28_08-30-17.md
scripts/: test_clone.py
spec/: constitution.md
src/: graph.py  llm.py  state.py
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  doc_tools.py  repo_tools.py
web/templates/: index.html
